compiler/kernc_cli/tests/soundness/reject/specialization/const_generic_blanket_supertrait_fake_refl_must_not_infer_assoc.rn
// The fake-reflection hole is not limited to type parameters: a const-generic
// trait argument must not let an open projection reuse a shadowable blanket
// associated-type result.
// stderr: mismatched types

trait TypeFor[N: usize] {
    type Is;
};

trait Lift[N: usize]: TypeFor[N] {};

impl[S, N: usize] S: TypeFor[N] {
    type Is = &fn() i32;
}

impl[S, N: usize] S: Lift[N] {}

struct FakeProof[N: usize] {};

impl[N: usize] FakeProof[N]: TypeFor[N] {
    type Is = &fn(i32) i32;
}

fn rewrite[N: usize, RW](value: RW.TypeFor[N].Is) &fn() i32
    where RW: Lift[N],
{
    return value;
}

fn id(value: i32) i32 {
    return value;
}

fn main() i32 {
    let forged = rewrite[4, FakeProof[4]](id);
    return forged() - 4;
}
